--- a/dr_index.html
+++ b/dr_index.html
@@ -7,8 +7,8 @@
     Case Problem 3
     
     Diane's Run Home Page
-    Author: 
-    Date:   
+    Author: Jeremiah Ruiz 
+    Date:   8-16-19
 
     Filename: dr_index.html
    -->
